Autostart KCM: update env and shutdown paths to GenericConfigLocation + plasma-workspace + [env|shutdown]

In order to fix bug 333793, some adjustments to both the startkde (RR 119145) and the autostart KCM are needed.
This patch, like the analogous one made to startkde, moves env and shutdown directories to GenericConfigLocation + plasma-workspace/[env|shutdown].

BUG: 333793
REVIEW: 119146